--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "antoinectp/tcpdf",
+	"name": "tecnickcom/tcpdf",
 	"version": "6.2.13",
 	"homepage": "http://www.tcpdf.org/",
 	"type": "library",
