--- a/composer.json
+++ b/composer.json
@@ -17,23 +17,6 @@
 		"php": ">=5.3.0"
 	},
 	"autoload": {
-		"classmap": [
-		"config",
-		"include",
-		"tcpdf.php",
-		"tcpdf_parser.php",
-		"tcpdf_import.php",
-		"tcpdf_barcodes_1d.php",
-		"tcpdf_barcodes_2d.php",
-		"include/tcpdf_colors.php",
-		"include/tcpdf_filters.php",
-		"include/tcpdf_font_data.php",
-		"include/tcpdf_fonts.php",
-		"include/tcpdf_images.php",
-		"include/tcpdf_static.php",
-		"include/barcodes/datamatrix.php",
-		"include/barcodes/pdf417.php",
-		"include/barcodes/qrcode.php"
-		]
+		"psr-0": {"antoinectp\tcpdf": ""}
 	}
 }
